[tool.poetry]
name = "Olive Oil : Python project"
version = "0.1.0"
description = "This project uses an olive oil dataset"
authors = ["Nasrin Sultana Nipa <nasrin.sultanan@smail.astate.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
pyarrow = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
